# basic

./: CMakeLists.txt  README.md  codegen.sh  doxygen.cfg  import.sh
debian/: control
include/automy/basic/: GenericBuffer.h  GenericTransformClient.h  Image.h  Image.hpp  Image16.h  Image16.hpp  Image32.h  Image32.hpp  Image8.h  Image8.hpp  ImageF32.h  ImageF32.hpp  ImageF64.h  ImageF64.hpp  MultiTransformClient.h  Serialize.h  SparseGrid.h  TransformBuffer.h  TransformClient.h  TransformPublisher.h  basic.h  fp16.h  matrix_hash.h
include/basic/: GenericBuffer.h  Image.h  Image16.h  Image32.h  Image8.h  ImageF16.h  ImageF32.h  ImageF64.h  Serialize.h  SparseGrid.h  TransformBuffer.h  TransformClient.h  fp16.h  matrix_hash.h
interface/: DataPacket.vni  ImageFrame.vni  ImageFrame16.vni  ImageFrame32.vni  ImageFrame8.vni  ImageFrameF16.vni  ImageFrameF32.vni  ImageFrameF64.vni  MultiImageFrame.vni  Scalar.vni  Transform3D.vni  Trigger.vni  package.vni
modules/: TransformPublisher.vni
src/: Image.cpp  Image16.cpp  Image32.cpp  Image8.cpp  ImageF16.cpp  ImageF32.cpp  ImageF64.cpp  ImageFrame.cpp  Transform3D.cpp  TransformPublisher.cpp
